--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nuxt": "^3.15.4",
     "tailwindcss": "^4.0.6",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "wrangler": "^3.109.1"
   }
 }
